Fixed classes wrap only

--- a/index.html
+++ b/index.html
@@ -103,15 +103,16 @@
     </div>
 
     <div class="class">
-      <img src="resources/course-software.jpg"/>
+      <img src="resources/course-computer-art.jpg"/>
       <div class="classinfo">
       <h2>Computer art</h2>
       <h3>COURSES</br>Imaging & Design, Web Design, Motion Graphics & Visual
         Effects, Computer Animation</h3>
     </div>
+    </div>
 
     <div class="class">
-      <img src="resources/course-software.jpg"/>
+      <img src="resources/course-design.jpg"/>
       <div class="classinfo">
       <h2>Design</h2>
       <h3>COURSES</br>User Experience Design, User Research, Visual Design</h3>
@@ -119,7 +120,7 @@
     </div>
 
     <div class="class">
-      <img src="resources/course-software.jpg"/>
+      <img src="resources/course-data.jpg"/>
       <div class="classinfo">
       <h2>Data</h2>
       <h3>COURSES</br>Data Science, Big Data, SQL, Data Visualization</h3>
@@ -127,7 +128,7 @@
     </div>
 
     <div class="class">
-      <img src="resources/course-software.jpg"/>
+      <img src="resources/course-business.jpg"/>
       <div class="classinfo">
       <h2>Business</h2>
       <h3>COURSES</br>Product Development, Business Development, Startup</h3>
@@ -135,7 +136,7 @@
     </div>
 
     <div class="class">
-      <img src="resources/course-software.jpg"/>
+      <img src="resources/course-marketing.jpg"/>
       <div class="classinfo">
       <h2>Marketing</h2>
       <h3>COURSES</br>Analytics, Content Marketing, Mobile Marketing</h3>
@@ -143,7 +144,6 @@
     </div>
   </div>
 </div>
-
 
     <!--Thesis-->
 
