--- a/index.html
+++ b/index.html
@@ -9,83 +9,90 @@
 
     <!--Header-->
  <header>
-  <div class="logo">
-   <img src="./resources/ic-logo.svg"/>
-   <span>Colmar Academy</span>
+  <div class="logo flex-container">
+    <div class="links flex-container">
+   <img class="logoimage" src="./resources/ic-logo.svg"/>
+   <div class="colmar"><span>Colmar Academy</span></div>
   </div>
 
-  <nav>
-    <ul>
-      <span><a href="#">On campus</a></span>
-      <span><a href="#">Online</a></span>
-      <span><a href="#">For companies</a></span>
-      <span><a href="#">Sign in</a></span>
+  <nav class="flex-container navigation">
+    <ul class="flex-container">
+      <li><a href="#">On campus</a></li>
+      <li><a href="#">Online</a></li>
+      <li><a href="#">For companies</a></li>
+      <li><a href="#">Sign in</a></li>
    </ul>
  </nav>
+ </div>
  </header>
 
     <!--Banner-->
 
-<div id="banner">
-  <div class="learn">
-  <h1>Learn something new everyday</h1>
-  <h2>There's a whole world out there waiting to be
+<section class="flex-container">
+  <div class="banner-img">
+     <img src="resources/banner.jpg">
+  </div>
+  <div class="banner">
+   <h1>Learn something new everyday</h1>
+   <h2>There's a whole world out there waiting to be
     discovered.</h2>
- <div class="button">
-             <a href="#">Start here</a>
-           </div>
-      </div>
-    </div>
+   <button>Start here</button>
+  </div>
+</section>
+
 
     <!--Articles-->
 
-    <div class="article section2">
-      <div class="articlecontents">
+    <section class="flex-box">
+      <article class="articlecontents">
         <div class="keeppracticing">
           <img src="resources/information-main.jpg"/>
-          <div>
+          <div class="topiccontent">
             <h1>It doesn't hurt to keep practicing</h1>
             <p>&ldquo;Practice isn't the thing you do <em>once</em> you're good.
               It's the thing you do that <em>makes</em> you good.&rdquo;</p>
             <p class="gladwell">― Malcolm Gladwell, <em>Outliers:
               The Story of Success</em></p>
           </div>
-        </div>
+        </article>
 
-        <div class="topics">
-
-          <div class="topic">
-            <img class="full" src="resources/information-orientation.jpg"/>
-            <div class="detail">
+        <div class="topics flex-box">
+          <article class="flex-box">
+            <div class="classimage">
+             <img class="full" src="resources/information-orientation.jpg"/>
+            </div>
+            <div class="flex-box detail">
               <h2>Orientation date</h2>
               <h3 class="brief">Tue 10/11 & Wed 10/12: 8am-3pm</h3>
               <p><a class="color-primary-3" href="#">Read more</a></p>
             </div>
-          </div>
+          </article>
 
-          <div class="topic">
+          <article class="flex-box">
+           <div class="classimage">
             <img class="full" src="resources/information-campus.jpg"/>
-            <div class="detail">
+           </div>
+            <div class="flex-box detail">
               <h2>Our campus</h2>
               <h3 class="brief">Find which campus is close by you</h3>
               <p><a class="color-primary-3" href="#">Read more</a></p>
             </div>
-          </div>
+          </article>
 
-          <div class="topic">
+          <article class="flex-box">
+           <div class="classimage">
             <img class="full" src="resources/information-guest-lecture.jpg"/>
-            <div class="detail">
+           </div>
+            <div class="flex-box detail">
               <h2>Our guest lecture</h2>
               <h3 class="brief">Join a keynote with Oliver Sack about music
               in medical treatment</h3>
               <p><a class="color-primary-3" href="#">Read more</a></p>
             </div>
-          </div>
-
+          </article>
         </div>
-      </div>
-    </div>
-
+      </section>
+</div>
 
 
     <!--Classes-->
@@ -98,7 +105,8 @@
      <img src="resources/course-software.jpg"/>
      <div class="classinfo">
       <h2>Software engineering</h2>
-      <h3>COURSES</br>Web Development, Mobile Development, iOT, APIs</h3>
+      <h3>COURSES</h3>
+      <p>Web Development, Mobile Development, iOT, APIs</p>
     </div>
     </div>
 
@@ -106,8 +114,9 @@
       <img src="resources/course-computer-art.jpg"/>
       <div class="classinfo">
       <h2>Computer art</h2>
-      <h3>COURSES</br>Imaging & Design, Web Design, Motion Graphics & Visual
-        Effects, Computer Animation</h3>
+      <h3>COURSES</h3>
+      <p>Imaging & Design, Web Design, Motion Graphics & Visual
+        Effects, Computer Animation</p>
     </div>
     </div>
 
@@ -115,7 +124,8 @@
       <img src="resources/course-design.jpg"/>
       <div class="classinfo">
       <h2>Design</h2>
-      <h3>COURSES</br>User Experience Design, User Research, Visual Design</h3>
+      <h3>COURSES</h3>
+      <p>User Experience Design, User Research, Visual Design</p>
       </div>
     </div>
 
@@ -123,7 +133,8 @@
       <img src="resources/course-data.jpg"/>
       <div class="classinfo">
       <h2>Data</h2>
-      <h3>COURSES</br>Data Science, Big Data, SQL, Data Visualization</h3>
+      <h3>COURSES</h3>
+      <p>Data Science, Big Data, SQL, Data Visualization</p>
       </div>
     </div>
 
@@ -131,7 +142,8 @@
       <img src="resources/course-business.jpg"/>
       <div class="classinfo">
       <h2>Business</h2>
-      <h3>COURSES</br>Product Development, Business Development, Startup</h3>
+      <h3>COURSES</h3>
+      <p>Product Development, Business Development, Startup</p>
       </div>
     </div>
 
@@ -139,7 +151,8 @@
       <img src="resources/course-marketing.jpg"/>
       <div class="classinfo">
       <h2>Marketing</h2>
-      <h3>COURSES</br>Analytics, Content Marketing, Mobile Marketing</h3>
+      <h3>COURSES</h3>
+      <p>Analytics, Content Marketing, Mobile Marketing</p>
       </div>
     </div>
   </div>
@@ -147,35 +160,41 @@
 
     <!--Thesis-->
 
-<div class="article section4">
+<div class="flex-container exhibits">
   <h1>Thesis exhibit</h1>
- <div class="articlecontents">
-  <div class="keeppracticing">
+ <div class="flex-container">
+  <div class="exhibits-container flex-container">
    <video autoplay loop><source src="resources/videos/thesis.mp4" type="video/mp4">
    </video>
-   <h2>Reimagine urban</h2>
+     <h2>Reimagine urban</h2>
    <h3>“By far the greatest and most admirable form of wisdom is that
      needed to plan and beautify cities and human communities.” ― Socrates</h3>
   </div>
- </div>
- <div class="topics">
-  <div class="topic">
+
+ <div class="topics flex-container">
+
+  <div class="flex-container">
+   <div class="video-container">
     <img class="full" src="resources/thesis-fisma.jpg"/>
-    <div class="titleexhibit">
-      <h2>Fisma: Design and Prototype</h2>
-      <h3 class="infoexhibit">Designer showcase of new prototype product</h3>
-    </div>
+   </div>
+   <div class="exhibitinfo">
+    <h2>Fisma: Design and Prototype</h2>
+    <h3>Designer showcase of new prototype product</h3>
+   </div>
   </div>
 
-  <div class="topic">
-    <img class="full" src="resources/thesis-now-and-then.jpg"/>
-    <div class="titleexhibit">
-      <h2>Now and then</h2>
-      <h3 class="infoexhibit">Research study about New York</h3>
+  <div class="flex-container">
+   <div class="video-container">
+    <img src="resources/thesis-now-and-then.jpg"/>
+   </div>
+  <div class="exhibitinfo">
+    <h2>Now and then</h2>
+    <h3>Research study about New York</h3>
   </div>
  </div>
 </div>
-
+</div>
+</div>
     <!--Footer-->
 
 <footer>
