--- a/index.html
+++ b/index.html
@@ -12,8 +12,17 @@
   <div class="logo flex-container">
     <div class="links flex-container">
    <img class="logoimage" src="./resources/ic-logo.svg"/>
-   <div class="colmar"><span>Colmar Academy</span></div>
+   <div class="colmar"><span>COLMAR ACADEMY</span></div>
   </div>
+
+  <nav class="mobilenav">
+      <ul class="flex-container">
+          <li><a href="#"><img src="./resources/ic-logo.svg"></a></li>
+          <li><a href="#"><img src="./resources/ic-on-campus.svg"></a></li>
+          <li><a href="#"><img src="./resources/ic-online.svg"></a></li>
+          <li><a href="#"><img src="./resources/ic-login.svg"></a></li>
+      </ul>
+  </nav>
 
   <nav class="flex-container navigation">
     <ul class="flex-container">
@@ -160,18 +169,18 @@
 
     <!--Thesis-->
 
-<div class="flex-container exhibits">
+<div class="flex-container exhibits">   <!--startthesis-->
   <h1>Thesis exhibit</h1>
- <div class="flex-container">
-  <div class="exhibits-container flex-container">
+ <div class="flex-container">  <!--thesis2-->
+  <div class="exhibits-container flex-container">  <!--thesis3-->
    <video autoplay loop><source src="resources/videos/thesis.mp4" type="video/mp4">
    </video>
      <h2>Reimagine urban</h2>
    <h3>“By far the greatest and most admirable form of wisdom is that
      needed to plan and beautify cities and human communities.” ― Socrates</h3>
-  </div>
+  </div>  <!--closethesis3-->
 
- <div class="topics flex-container">
+ <article class="topics flex-container">  <!--thesis4-->
 
   <div class="flex-container">
    <div class="video-container">
@@ -191,10 +200,11 @@
     <h2>Now and then</h2>
     <h3>Research study about New York</h3>
   </div>
- </div>
 </div>
+</article>
 </div>
-</div>
+</div>  <!--endthesis-->
+
     <!--Footer-->
 
 <footer>
