--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <div class="flex-box detail">
               <h2>Orientation date</h2>
               <h3 class="brief">Tue 10/11 & Wed 10/12: 8am-3pm</h3>
-              <p><a class="color-primary-3" href="#">Read more</a></p>
+              <p><a class="readmore" href="#">Read more</a></p>
             </div>
           </article>
 
@@ -84,7 +84,7 @@
             <div class="flex-box detail">
               <h2>Our campus</h2>
               <h3 class="brief">Find which campus is close by you</h3>
-              <p><a class="color-primary-3" href="#">Read more</a></p>
+              <p><a class="readmore" href="#">Read more</a></p>
             </div>
           </article>
 
@@ -96,7 +96,7 @@
               <h2>Our guest lecture</h2>
               <h3 class="brief">Join a keynote with Oliver Sack about music
               in medical treatment</h3>
-              <p><a class="color-primary-3" href="#">Read more</a></p>
+              <p><a class="readmore" href="#">Read more</a></p>
             </div>
           </article>
         </div>
@@ -167,6 +167,16 @@
   </div>
 </div>
 
+<section class="responsiveclass flex-container">
+    <h2><a href="#">Software engineering</a></h2>
+    <h2><a href="#">Computer art</a></h2>
+    <h2><a href="#">Design</a></h2>
+    <h2><a href="#">Data</a></h2>
+    <h2><a href="#">Business</a></h2>
+    <h2><a href="#">Marketing</a></h2>
+</section>
+
+
     <!--Thesis-->
 
 <div class="flex-container exhibits">   <!--startthesis-->
@@ -203,7 +213,9 @@
 </div>
 </article>
 </div>
-</div>  <!--endthesis-->
+</div>
+
+<!--endthesis-->
 
     <!--Footer-->
 
